Committing changes before rebase

--- a/about.html
+++ b/about.html
@@ -14,18 +14,18 @@
         <nav id="navbar">
             <div class="nav-wrapper">
                 <div class="logo">
-                    <a href="#">gns.ai</a>
+                    <a href="index.html">gns.ai</a>
                 </div>
                 <div class="menu">
                     <ul>
-                        <li><a href="about.html">About</a></li>
+                        <li><a href="about.html">About Me</a></li>
                         <li><a href="project.html">Projects</a></li>
                         <li><a href="blog.html">Blogs</a></li>
                         <li><a href="contact.html">Contact</a></li>
                     </ul>
                 </div>
                 <div class="resume">
-                    <a href="#" class="resume-btn">Download Resume</a>
+                    <a href="https://1drv.ms/b/s!AnqvAUzOLUdyidsSSqDEVU4-_VlD2w?e=ipPuIu" target="_blank" class="resume-btn">Download Resume</a>
                 </div>
             </div>
         </nav>
