--- a/contact.html
+++ b/contact.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Your Portfolio</title>
     <link rel="stylesheet" href="style/style.css">
+    <link rel="stylesheet" href="style/contact.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap">
 
@@ -14,23 +15,39 @@
         <nav id="navbar">
             <div class="nav-wrapper">
                 <div class="logo">
-                    <a href="#">gns.ai</a>
+                    <a href="index.html">gns.ai</a>
                 </div>
                 <div class="menu">
                     <ul>
-                        <li><a href="about.html">About</a></li>
+                        <li><a href="about.html">About Me</a></li>
                         <li><a href="project.html">Projects</a></li>
                         <li><a href="blog.html">Blogs</a></li>
                         <li><a href="contact.html">Contact</a></li>
                     </ul>
                 </div>
                 <div class="resume">
-                    <a href="#" class="resume-btn">Download Resume</a>
+                    <a href="https://1drv.ms/b/s!AnqvAUzOLUdyidsSSqDEVU4-_VlD2w?e=ipPuIu" target="_blank" class="resume-btn">Download Resume</a>
                 </div>
             </div>
         </nav>
     </header>
+
+    <section id="contact-header">
+        <h1>Contact Me</h1>
+        <img src="static/Contact-me.png" alt="Contact Image" id="contact-image">
+    </section>
     
+    <section id="contact-info">
+        <p>I am passionate about Natural Language Processing and Language Model development, seeking opportunities that allow me to contribute and grow in these fields. Whether you're looking for a full-time specialist, a collaborator for your next project, or freelance expertise, I'd love to hear from you.</p>
+
+        <div class="social-buttons">
+            <a href="mailto:ganeshepili1998@gmail.com" class="button email"><i class="fas fa-envelope"></i> Email Me</a>
+            <a href="https://github.com/gnsepili" target="_blank" class="button github"><i class="fab fa-github"></i> GitHub</a>
+            <a href="https://www.linkedin.com/in/gnsepili/" target="_blank" class="button linkedin"><i class="fab fa-linkedin"></i> LinkedIn</a>
+            <a href="https://www.instagram.com/gns.ai/" target="_blank" class="button instagram"><i class="fab fa-instagram"></i> Instagram</a>
+            <a href="https://twitter.com/ganesh_epili" target="_blank" class="button twitter"><i class="fab fa-twitter"></i> Twitter</a>
+        </div>
+    </section>
 
 </body>
 </html>
