--- a/index.html
+++ b/index.html
@@ -14,18 +14,18 @@
         <nav id="navbar">
             <div class="nav-wrapper">
                 <div class="logo">
-                    <a href="#">gns.ai</a>
+                    <a href="index.html">gns.ai</a>
                 </div>
                 <div class="menu">
                     <ul>
-                        <li><a href="about.html">About</a></li>
+                        <li><a href="about.html">About Me</a></li>
                         <li><a href="project.html">Projects</a></li>
                         <li><a href="blog.html">Blogs</a></li>
                         <li><a href="contact.html">Contact</a></li>
                     </ul>
                 </div>
                 <div class="resume">
-                    <a href="#" class="resume-btn">Download Resume</a>
+                    <a href="https://1drv.ms/b/s!AnqvAUzOLUdyidsSSqDEVU4-_VlD2w?e=ipPuIu" target="_blank" class="resume-btn">Download Resume</a>
                 </div>
             </div>
         </nav>
@@ -36,15 +36,15 @@
             <div class="hero-content">
                 <div class="hero-image">
                     
-                    <img src="/static/profile.jpg" alt="Your Name">
+                    <img src="static/profile.jpg" alt="Your Name">
                 </div>
                 <div class="intro-bio">
                     <h2><span id="hi">Hi</span> There!</h2>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Expedita quisquam distinctio sed, nam eum vitae ad dicta voluptatem officia nemo at porro dignissimos ut fuga optio iusto sit. Consequatur, delectus?</p><br>
+                    <p>My name is <span id="name">Ganesh Epili</span> and I'm a </p><br>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Expedita quisquam distinctio sed, nam eum vitae ad dicta voluptatem officia nemo at porro dignissimos ut fuga optio iusto sit. Consequatur, delectus?</p>
                                        
                     <div class="action-buttons">
-                        <button id="hire-me">Hire Me</button>
+                        <button id="hire-me">Know more about me → </button>
                         <button id="see-my-work">See My Work</button>
                     </div>
                     <!-- Add more paragraphs as needed -->
@@ -58,6 +58,13 @@
             </div>
         </div>
     </section>
-
+    <script>
+        document.getElementById("see-my-work").addEventListener("click", function() {
+            window.location.href = "project.html";
+        });
+        document.getElementById("hire-me").addEventListener("click", function() {
+            window.location.href = "about.html";
+        });
+        </script>
 </body>
 </html>
