--- a/404.html
+++ b/404.html
@@ -26,7 +26,7 @@
                     </ul>
                 </div>
                 <div class="resume">
-                    <a href="#" class="resume-btn">Download Resume</a>
+                    <a href="https://1drv.ms/b/s!AnqvAUzOLUdyidsSSqDEVU4-_VlD2w?e=ipPuIu" target="_blank" class="resume-btn">Download Resume</a>
                 </div>
             </div>
         </nav>
