--- a/project.html
+++ b/project.html
@@ -15,23 +15,23 @@
         <nav id="navbar">
             <div class="nav-wrapper">
                 <div class="logo">
-                    <a href="#">gns.ai</a>
+                    <a href="index.html">gns.ai</a>
                 </div>
                 <div class="menu">
                     <ul>
-                        <li><a href="about.html">About</a></li>
+                        <li><a href="about.html">About Me</a></li>
                         <li><a href="project.html">Projects</a></li>
                         <li><a href="blog.html">Blogs</a></li>
                         <li><a href="contact.html">Contact</a></li>
                     </ul>
                 </div>
                 <div class="resume">
-                    <a href="#" class="resume-btn">Download Resume</a>
+                    <a href="https://1drv.ms/b/s!AnqvAUzOLUdyidsSSqDEVU4-_VlD2w?e=ipPuIu" target="_blank" class="resume-btn">Download Resume</a>
                 </div>
             </div>
         </nav>
     </header>
-
+    <h1 class="section-heading">Projects</h1>
     <section id="projects" style="background-color: #1A1A1A;">
         <div id="projects-container">
             <!-- Project cards will be inserted here by JavaScript -->
